[package]
name = "request-multiplexer"
version = "0.1.0"
authors = ["Tung Nguyen"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
anchor-lang = "0.24.2"
solana-program = "1.9.13"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[lib]
name = "vault"
crate-type = ["cdylib", "lib"]

[profile.release]
overflow-checks = true
